[package]
name = "test-assembler"
description = "A set of types for building complex binary streams."
version = "0.1.6"
authors = ["Ted Mielczarek <ted@mielczarek.org>"]
license = "MIT"
homepage = "https://github.com/luser/rust-test-assembler"
repository = "https://github.com/luser/rust-test-assembler"

[dependencies]
byteorder = "1"

[dev-dependencies]
doc-comment = "0.3.3"
